# RaytracerContest

./: .gitignore  LICENSE  qwen.cpp
qwen/: CMakeLists.txt
qwen/src/: logger.cpp  logger.h  main.cpp  raytracer.cpp  raytracer.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h
